src/styles/Asset.module.css
.Asset {
  justify-content: center;
  align-items: center;
  min-height: 120px;
  display: flex;
  flex-direction: column;
  border-radius: 20px;
}

@media only screen and (max-width: 767px) {
  .Asset img {
   height: 300px;
   width: 400px;
  }
}

@media only screen and (max-width: 667px) {
  .Asset img {
   height: 225px;
   width: 300px;
  }
}

